# valuta

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE_GPL2.0.txt  LICENSE_LGPL_2.1.txt  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  pytest.ini  pytest_sqlalchemy.ini  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
benchmarks/: README.rst  constants.py  factories.py  profile.py
docs/: changelog.rst  conf.py  conf.py.distrib  documentation.rst.distrib  index.rst  valuta.contrib.django_integration.rst  valuta.contrib.django_integration.tests.rst  valuta.contrib.rst  valuta.currencies.rst  valuta.rst  valuta.tests.rst
examples/django_example/: README.rst
examples/requirements/: benchmarks.in  benchmarks.txt  common.txt  deployment.txt  dev.txt  django_2_2.in  django_2_2.txt  django_2_2_and_flask.txt  django_3_0.in  django_3_0.txt  django_3_0_and_flask.txt  django_3_1.in  django_3_1.txt  django_3_1_and_flask.txt  django_3_2.in  django_3_2.txt  django_3_2_and_flask.txt  docs.in  docs.txt  flask.in  flask.txt  style_checkers.txt  test.in  test.txt  testing.txt
examples/sqlalchemy_example/: README.rst  run_server.py
scripts/: benchmark.sh  build_docs.sh  check_release.sh  clean_up.sh  compile_requirements.sh  install.sh  make_migrations.sh  make_release.sh  prepare_docs.sh  rebuild_docs.sh  shell.sh  sqlalchemy_migrate.sh  test_compile_requirements.sh  uninstall.sh
src/valuta/: __init__.py  base.py  cli.py  constants.py  exceptions.py  helpers.py  list_of_circulating_currencies.csv  registry.py  scaffolding.py  shortcuts.py  (+1 more)
(+229 files in other folders)
