[bdist_wheel]
universal = 1

[wheel]
universal = 1

[coverage:run]
branch = True
source = ./src/valuta/

[coverage:report]
fail_under = 95
show_missing = True

[flake8]
exclude =
    build,
    dist,
    docs,
    .git,
    .tox,
    ./src/valuta/contrib/django_integration/migrations/*.py
ignore =
max-line-length = 80

[isort]
atomic = true
combine_as_imports = true
default_section = THIRDPARTY
forced_separate = valuta
include_trailing_comma = true
known_first_party = valuta
known_third_party =
    django
    factory
multi_line_output = 5
skip =
    docs,
    fabfile.py
    setup.py,
    wsgi.py,
    ./src/valuta/contrib/django_integration/migrations/*.py,

[metadata]
license-file = LICENSE_GPL2.0.txt
